fix  - screen numbers, add overflow-x

--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ body {
   padding-bottom: 5px;
   width: 300px;
   height: auto;
-  word-wrap: break-word;
+  overflow-x: hidden;
 }
 
 .display-operation {
